--- a/res/values-hi/strings.xml
+++ b/res/values-hi/strings.xml
@@ -63,6 +63,8 @@
   <string name="AttachmentManager_signal_requires_location_information_in_order_to_attach_a_location">किसी स्थान को संलग्न करने के लिए Signal को स्थान अनुमति की आवश्यकता होती है, लेकिन इसे स्थायी रूप से अस्वीकार कर दिया गया है। कृपया ऐप सेटिंग्स मेनू पर जारी रखें, \"अनुमतियां\" चुनें, और \"स्थान\" सक्षम करें।</string>
   <string name="AttachmentManager_signal_requires_the_camera_permission_in_order_to_take_photos_but_it_has_been_permanently_denied">Signal को फ़ोटो लेने के लिए कैमरा अनुमति की आवश्यकता होती है, लेकिन इसे स्थायी रूप से अस्वीकार कर दिया गया है। कृपया ऐप सेटिंग्स मेनू पर जारी रखें, \"अनुमतियां\" चुनें, और \"कैमरा\" सक्षम करें।</string>
   <!--AttachmentUploadJob-->
+  <string name="AttachmentUploadJob_uploading_media">मीडिया अपलोड कर रहा है...</string>
+  <string name="AttachmentUploadJob_compressing_video_start">वीडियो को संपीड़ित कर रहा है...</string>
   <!--AudioSlidePlayer-->
   <string name="AudioSlidePlayer_error_playing_audio">ऑडियो बजाने में त्रुटि!</string>
   <!--BlockedContactsActivity-->
@@ -75,13 +77,26 @@
   <!--CallScreen-->
   <string name="CallScreen_Incoming_call">आने वाली कॉल</string>
   <!--CameraActivity-->
+  <string name="CameraActivity_image_save_failure">छवि सहेजने में विफल रहा</string>
   <!--CameraXFragment-->
+  <string name="CameraXFragment_tap_for_photo_hold_for_video">फोटो के लिए टैप, वीडियो के लिए दबाए रखें</string>
+  <string name="CameraXFragment_capture_description">कैप्चर</string>
+  <string name="CameraXFragment_change_camera_description">कैमरा बदलें</string>
+  <string name="CameraXFragment_open_gallery_description">गैलरी खोलें</string>
   <!--CameraContacts-->
+  <string name="CameraContacts_recent_contacts">हाल ही के सम्पर्क</string>
+  <string name="CameraContacts_signal_contacts">Signal सम्पर्क</string>
+  <string name="CameraContacts_signal_groups">Signal समूह</string>
+  <string name="CameraContacts_you_can_share_with_a_maximum_of_n_conversations">आप अधिकतम %d बातचीत साझा कर सकते हैं।</string>
+  <string name="CameraContacts_select_signal_recipients">Signal प्राप्तकर्ताओं को चुनें</string>
+  <string name="CameraContacts_no_signal_contacts">कोई Signal प्राप्तकर्ता नहीं</string>
+  <string name="CameraContacts_invite_a_contact_to_join_signal">सम्पर्क को Signal में जुड़ने के लिए आमंत्रित करें</string>
   <string name="CameraContacts__menu_search">सर्च</string>
   <!--ClearProfileActivity-->
   <string name="ClearProfileActivity_remove">हटा दें </string>
   <string name="ClearProfileActivity_remove_profile_photo">प्रोफ़ाइल फ़ोटो निकालें?</string>
   <!--CommunicationActions-->
+  <string name="CommunicationActions_no_browser_found">कोई वेब ब्राउजर नहीं मिला</string>
   <!--ConfirmIdentityDialog-->
   <string name="ConfirmIdentityDialog_your_safety_number_with_s_has_changed">%1$s के साथ आपका सुरक्षा नंबर बदल गया है। इसका मतलब यह हो सकता है कि कोई आपके संचार को रोकने की कोशिश कर रहा है, या उस %2$s ने Signal को फिर से इंस्टॉल किया है।</string>
   <string name="ConfirmIdentityDialog_you_may_wish_to_verify_your_safety_number_with_this_contact">आप इस संपर्क के साथ अपना सुरक्षा नंबर सत्यापित करना चाह सकते हैं।</string>
@@ -144,6 +159,7 @@
   <string name="ConversationActivity_error_leaving_group">समूह छोड़ने में त्रुटि</string>
   <string name="ConversationActivity_specify_recipient">कृपया एक संपर्क चुनें</string>
   <string name="ConversationActivity_unblock_this_contact_question">इस संपर्क को अनवरोधित करें?</string>
+  <string name="ConversationActivity_unblock_this_group_question">इस समूह को अनावरोधित करें?</string>
   <string name="ConversationActivity_you_will_once_again_be_able_to_receive_messages_and_calls_from_this_contact">आप एक बार फिर से इस संपर्क से संदेश और कॉल प्राप्त करने में सक्षम होंगे।</string>
   <string name="ConversationActivity_unblock">अनब्लॉक करें</string>
   <string name="ConversationActivity_attachment_exceeds_size_limits">आपके द्वारा भेजे जा रहे संदेश के प्रकार के लिए अनुलग्नक आकार सीमा से अधिक है।</string>
@@ -346,10 +362,14 @@
   <string name="InviteActivity_no_app_to_share_to">ऐसा लगता है कि आपके पास साझा करने के लिए कोई ऐप नहीं है।</string>
   <string name="InviteActivity_friends_dont_let_friends_text_unencrypted">दोस्त अपने दोस्तों को अनएन्क्रिप्टेड चैट नहीं करने देते हैं।</string>
   <!--Job-->
+  <string name="Job_working_in_the_background">पृष्ठभूमि में चल रहा है...</string>
   <!--MessageDetailsRecipient-->
   <string name="MessageDetailsRecipient_failed_to_send">भेजने में विफल</string>
   <string name="MessageDetailsRecipient_new_safety_number">नई सुरक्षा संख्या</string>
   <!--LongMessageActivity-->
+  <string name="LongMessageActivity_unable_to_find_message">संदेश खोजने में असमर्थ</string>
+  <string name="LongMessageActivity_message_from_s">%1$s से संदेश</string>
+  <string name="LongMessageActivity_your_message">आपका संदेश</string>
   <!--MessageRetrievalService-->
   <string name="MessageRetrievalService_signal">Signal</string>
   <string name="MessageRetrievalService_background_connection_enabled">पृष्ठभूमि कनेक्शन सक्षम</string>
@@ -382,9 +402,17 @@
   <string name="NotificationMmsMessageRecord_downloading_mms_message">एमएमएस संदेश डाउनलोड किया जा रहा है</string>
   <string name="NotificationMmsMessageRecord_error_downloading_mms_message">एमएमएस संदेश डाउनलोड करने में त्रुटि, पुनः प्रयास करने के लिए टैप करें</string>
   <!--MediaPickerActivity-->
+  <string name="MediaPickerActivity_send_to">%s को भेजें</string>
+  <string name="MediaPickerActivity__menu_open_camera">कैमरा खोलें</string>
   <!--MediaPickerItemFragment-->
+  <string name="MediaPickerItemFragment_tap_to_select">चयन के लिए टैप करें</string>
   <!--MediaSendActivity-->
+  <string name="MediaSendActivity_camera_unavailable">कैमरा अनुपलब्ध।</string>
+  <string name="MediaSendActivity_message_to_s">%s को संदेश</string>
+  <string name="MediaSendActivity_message">संदेश</string>
+  <string name="MediaSendActivity_select_recipients">प्राप्तकर्ताओं को चुनें</string>
   <string name="MediaSendActivity_signal_needs_access_to_your_contacts">आपके संपर्कों को प्रदर्शित करने के लिए Signal को आपके संपर्कों तक पहुंच की आवश्यकता है।</string>
+  <string name="MediaSendActivity_select_recipients_description">प्राप्तकर्ताओं को चुनें</string>
   <!--MediaRepository-->
   <string name="MediaRepository_all_media">सभी मीडिया</string>
   <!--MessageRecord-->
@@ -457,6 +485,7 @@
   <string name="RecipientPreferenceActivity_block">ब्लॉक</string>
   <string name="RecipientPreferenceActivity_unblock_this_contact_question">इस संपर्क को अनवरोधित करें?</string>
   <string name="RecipientPreferenceActivity_you_will_once_again_be_able_to_receive_messages_and_calls_from_this_contact">आप एक बार फिर से इस संपर्क से संदेश और कॉल प्राप्त करने में सक्षम होंगे।</string>
+  <string name="RecipientPreferenceActivity_unblock_this_group_question">इस समूह को अनावरोधित करें?</string>
   <string name="RecipientPreferenceActivity_error_leaving_group">समूह छोड़ने में त्रुटि</string>
   <string name="RecipientPreferenceActivity_unblock">अनब्लॉक करें</string>
   <string name="RecipientPreferenceActivity_enabled">सक्षम</string>
